--- a/LearnSphere/LearnSphere/View/PagePerfil.xaml
+++ b/LearnSphere/LearnSphere/View/PagePerfil.xaml
@@ -1,7 +1,8 @@
 ﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LearnSphere.View.PagePerfil"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             Title="Perfil">
     <ScrollView>
         <Grid>
             <Grid.RowDefinitions>
@@ -38,9 +39,8 @@
                 <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand">
                     <StackLayout>
                         <ImageButton x:Name="Carrinho" HorizontalOptions="CenterAndExpand" Source="vender.png" CornerRadius="50" BackgroundColor="#f0f1f5" Padding="10" HeightRequest="50" WidthRequest="50" Clicked="Carrinho_Clicked" />
-                        <Label Text="Vendas" FontSize="12" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"/>
+                        <Label Text="Carrinho" FontSize="12" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"/>
                     </StackLayout>
-                    <!-- Botão do Administrador -->
                     <StackLayout x:Name="adminStackLayout" IsVisible="False" Margin="20,0,0,0">
                         <ImageButton x:Name="Admin" HorizontalOptions="CenterAndExpand" Source="admin.png" CornerRadius="50" BackgroundColor="#f0f1f5" Padding="10" HeightRequest="50" WidthRequest="50" Clicked="Admin_Clicked"/>
                         <Label Text="Admin" FontSize="12" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Center"/>
