--- a/LearnSphere/LearnSphere/View/PageValidarCurso.xaml
+++ b/LearnSphere/LearnSphere/View/PageValidarCurso.xaml
@@ -1,20 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:LearnSphere.Converters"
              x:Class="LearnSphere.View.PageValidarCurso"
              Title="Validar Cursos">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout Padding="20">
             <Label Text="Cursos para Validação" FontAttributes="Bold" FontSize="20" HorizontalOptions="Center" Margin="0,10,0,20" />
-            <ListView x:Name="listViewCursos" ItemTapped="ListViewCursos_ItemTapped">
+            <ListView x:Name="listViewCursos" ItemTapped="ListViewCursos_ItemTapped" RowHeight="120" SeparatorColor="Black">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="10">
-                                <Label Text="{Binding titulo}" FontAttributes="Bold" FontSize="16" />
-                                <Label Text="{Binding subtitulo}" FontSize="14" />
-                                <Label Text="{Binding criador}" FontSize="14" />
-                            </StackLayout>
+                            <Frame CornerRadius="10" Margin="4" Padding="5" BackgroundColor="#FFFFFF">
+                                <StackLayout Orientation="Horizontal" Spacing="10">
+                                    <Image Source="{Binding foto, Converter={StaticResource ByteArrayToImageSourceConverter}}" Aspect="AspectFill" WidthRequest="100" HeightRequest="100"/>
+                                    <StackLayout Orientation="Vertical" Spacing="5">
+                                        <Label Text="{Binding titulo}" FontAttributes="Bold" FontSize="18" TextColor="#000000"/>
+                                        <Label Text="{Binding subtitulo}" LineBreakMode="TailTruncation" FontSize="14" TextColor="#666666"/>
+                                        <Label Text="{Binding criador}" FontSize="14" TextColor="#666666"/>
+                                    </StackLayout>
+                                </StackLayout>
+                            </Frame>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
